<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:padding="8dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:padding="8dp"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/biometric_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biometric_error"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="invisible"
        android:padding="8dp"/>
</LinearLayout>