<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/authenticate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/authenticate_button"
            android:padding="@dimen/button_padding"/>

        <Button
            android:id="@+id/authenticate_compat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/authenticate_compat_button"
            android:padding="@dimen/button_padding"/>

        <Button
            android:id="@+id/first_time_flow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/first_time_flow_button"
            android:padding="@dimen/button_padding"/>

        <Button
            android:id="@+id/main_flow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/main_flow_button"
            android:padding="@dimen/button_padding"/>
    </LinearLayout>
</layout>